# armature

./: .gitignore  CLASSIFICATION_WEIGHTS.md  README.md  conftest.py  pyproject.toml  run_full_validation.py  setup.py
Synthetic Log Data/looselyStructuredLogs/: ls1.xes  ls10.xes  ls11.xes  ls12.xes  ls2.xes  ls3.xes  ls4.xes  ls4a.xes  ls4b.xes  ls5.xes  ls6.xes  ls7.xes  ls8.xes  ls9.xes
Synthetic Log Data/looselyStructuredModels/: ls1.json  ls10.json  ls11.json  ls12.json  ls2.json  ls3.json  ls4.json  ls4a.json  ls4b.json  ls5.json  ls6.json  ls7.json  ls8.json  ls9.json
Synthetic Log Data/semiStructuredLogs/: ss1.xes  ss10.xes  ss11.xes  ss12.xes  ss2.xes  ss3.xes  ss4.xes  ss5.xes  ss6.xes  ss7.xes  ss8.xes  ss9.xes
Synthetic Log Data/semiStructuredModels/: ss1.json  ss10.json  ss11.json  ss12.json  ss2.json  ss3.json  ss4.json  ss5.json  ss6.json  ss7.json  ss8.json  ss9.json
Synthetic Log Data/structuredLogs/: s1.xes  s10.xes  s11.xes  s12.xes  s2.xes  s3.xes  s4.xes  s5.xes  s6.xes  s7.xes  s8.xes  s9.xes
Synthetic Log Data/unstructuredLogs/: u1.xes  u2.xes
armature/: __init__.py
docs/: CLASSIFICATION_RULES.md
scripts/: analyze_threshold_mismatch.py  analyze_weight_fixes.py  batch_classify_evaluation.py  batch_full.py  calibrate_thresholds.py  compare_all_detectors.py  compare_arm_bose.py  compare_log_dependencies.md  compare_log_dependencies.py  compare_matching.py  compute_synthetic_ratios.py  extract_rust_percentages.py  find_potential_diff_logs.py  full_verification.py  generate_classification_report.py  generate_dependency_report.py  generate_sample_logs.py  generate_xes_from_condec.sh  report_classification_test_data.py  run_arm_with_explanations.py  run_counter_examples.py  validate_v2_classifier.py  verify_benchmark_matching.py
tests/: CLASSIFICATION_LIMITATIONS.md  conftest.py  test_classification_accuracy.py  test_classification_config.py  test_classification_engine.py  test_classification_validation.py  test_cli_classify.py  test_cli_discover.py  test_cli_inspect.py  test_cli_utils.py  test_dependencies.py  test_dfg.py  test_discover.py  test_existential.py  test_matrix_basics.py  test_matrix_operations.py  test_percentages_rust_validation.py  test_scc.py  test_smoke.py  test_temporal.py  test_validation_log02.py  test_xes_parsing.py  test_yaml_serialization.py
(+151 files in other folders)
