[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armature"
version = "0.1.0"
description = "A workbench for process scientists - unified Python ecosystem for Activity Relationship Matrix (ARM) analysis, discovery, and process redesign"
authors = [{ name = "justchokingaround", email = "ivanonarch@tutanota.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "MIT"

dependencies = [
    "networkx>=3.2,<4.0", # Graph algorithms (SCC detection)
    "pandas>=2.1,<3.0",   # Event log parsing and manipulation
    "lxml>=5.0",           # XES XML streaming parser
    "pyyaml>=6.0,<7.0",   # ARM matrix YAML serialization
    "pydantic>=2.0,<3.0", # Data validation and modeling
    "pm4py>=2.7.17",      # Event log handling and drift detection
    "scipy>=1.11",        # Statistical testing for drift detection
    "tqdm>=4.66",         # Progress bars
    "matplotlib>=3.7",    # Visualization for drift analysis
    "rich>=13.0",          # Terminal tables and formatting
    "tabulate>=0.9",       # Multi-format table output (markdown, latex, etc.)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",     # Testing framework
    "pytest-cov>=4.1,<5.0", # Coverage reporting
    "black>=23.12,<24.0",   # Code formatter
    "ruff>=0.1,<0.2",       # Linter (replaces flake8, isort)
    "mypy>=1.7,<2.0",       # Type checker
    "types-pyyaml",         # Type stubs for PyYAML
    "jinja2>=3.1,<4.0",     # HTML report templates
]

[project.scripts]
armature = "armature.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100

[tool.setuptools.packages.find]
include = ["armature*"]
exclude = ["*tests*"]
